# ros2_task_orchestrator

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml
docker/: Dockerfile  docker-compose.yaml  ros_entrypoint.sh
docs/: architecture.md  event_envelope.md  external_client_integration.md  getting-started.md  index.md  public_api.md  public_api_reference.md  roadmap.md  ros_support.md
docs/adr/: 0001-project-identity-governance.md  0002-api-compatibility.md  0003-task-lifecycle.md  0004-persistence-model.md  0005-mission-model.md  0006-bridge-boundaries.md  0007-ros-distribution-support.md
docs/api/: public-api.md
docs/concepts/: observability.md
docs/configuration/: task-yaml.md
docs/examples/: agent_connection.md  nav2.md  sim_drone.md  sim_nav2.md
docs/operations/: recovery.md  sqlite-storage.md
docs/rfc/: 0001-product-and-api.md
task_orchestrator_core/: package.xml  setup.cfg  setup.py
task_orchestrator_core/launch/: task_orchestrator.launch.py
task_orchestrator_core/params/: task_orchestrator_defaults.yaml
task_orchestrator_core/resource/: task_orchestrator_core
task_orchestrator_core/task_orchestrator_core/: __init__.py  active_tasks.py  agent_registry.py  constants.py  error_model.py  event_hooks.py  orchestrator_node.py  policy.py  registry.py  storage.py  task_models.py
task_orchestrator_core/task_orchestrator_core/clients/: __init__.py  action_task.py  service_task.py
task_orchestrator_core/task_orchestrator_core/system_tasks/: __init__.py  control.py  mission.py  wait.py
task_orchestrator_core/test/: test_action_task_client.py  test_active_tasks.py  test_agent_registry.py  test_control_task.py  test_examples.py  test_import.py  test_mission_task.py  test_orchestrator_node.py  test_orchestrator_ros_api.py  test_policy.py  test_public_api_contract.py  test_registry.py  test_service_task_client.py  test_storage.py  test_wait_task.py
task_orchestrator_examples/: CMakeLists.txt  package.xml
task_orchestrator_examples/config/: nav2_tasks.yaml
task_orchestrator_examples/launch/: nav2_orchestrator.launch.py
task_orchestrator_examples/missions/: agent_wait_mission.json  nav2_wait_mission.json  nav2_wait_mission_template.yaml
task_orchestrator_examples/scripts/: demo_agent_client
task_orchestrator_msgs/: CMakeLists.txt  package.xml
task_orchestrator_msgs/action/: ExecuteTaskV1.action  MissionV1.action  WaitV1.action
task_orchestrator_msgs/msg/: ActiveTaskArrayV1.msg  ActiveTaskV1.msg  AgentRecordV1.msg  AgentStatusV1.msg  ErrorCodeV1.msg  MissionLeaseStatusV1.msg  MissionLeaseV1.msg  SubtaskGoalV1.msg  SubtaskResultV1.msg  TaskEventV1.msg  TaskFeedbackV1.msg  TaskRecordV1.msg  TaskResultV1.msg  TaskSpecV1.msg  TaskStatusV1.msg
task_orchestrator_msgs/srv/: CancelMissionV1.srv  CancelTasksV1.srv  ClaimMissionV1.srv  GetMissionStateV1.srv  GetTaskV1.srv  ListAgentsV1.srv  ListEventsV1.srv  ListTaskRecordsV1.srv  ListTasksV1.srv  PauseMissionV1.srv  PauseTasksV1.srv  RegisterAgentV1.srv  ReleaseMissionV1.srv  ReloadConfigV1.srv  ResumeMissionV1.srv  ResumeTasksV1.srv  RetryMissionV1.srv  StopTasksV1.srv  SubmitMissionV1.srv  ValidateMissionV1.srv  ValidateTaskV1.srv
task_orchestrator_sim_drone/: CMakeLists.txt  README.md  package.xml
task_orchestrator_sim_drone/action/: GoToWaypoint.action  Hover.action  Land.action  Takeoff.action
task_orchestrator_sim_drone/config/: drone_tasks.yaml
task_orchestrator_sim_drone/launch/: orchestrator_drone.launch.py  sim_drone.launch.py
task_orchestrator_sim_drone/missions/: inspection_route.json  takeoff_waypoint_land.json  timeout_mission.json
task_orchestrator_sim_drone/models/iris_with_standoffs/: ATTRIBUTION.md  model.config  model.sdf  model.urdf
task_orchestrator_sim_drone/requests/: cancel_inspection.json
task_orchestrator_sim_drone/scripts/: fake_drone_server  submit_inspection_mission
task_orchestrator_sim_drone/worlds/: drone_demo_world.sdf
task_orchestrator_sim_nav2/: CMakeLists.txt  README.md  package.xml
task_orchestrator_sim_nav2/config/: nav2_tasks.yaml
task_orchestrator_sim_nav2/launch/: orchestrator_nav2.launch.py  sim_nav2.launch.py
task_orchestrator_sim_nav2/missions/: nav2_route_template.yaml  navigate_to_pose.json  route_mission.json
task_orchestrator_sim_nav2/requests/: cancel_navigation.json  queued_navigation_goal.json
task_orchestrator_sim_nav2/scripts/: submit_route_mission
